[package]
name = "core_malloc"
version = "0.1.0"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Implementing abs_mm with a wrapper around crate alloc"
homepage = "https://github.com/ljsnogard/core_malloc"
keywords = ["alloc", "memory"]
categories = []
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_mm = { version = "0.1" }

[dev-dependencies]
env_logger = { version = "0.11.*" }
log = { version = "0.4.*" }