[package]
name = "core_malloc"
version = "0.1.1"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Implementing abs_mm with a wrapper around crate alloc"
homepage = "https://github.com/ljsnogard/core_malloc"
keywords = ["alloc", "memory"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_mm = { git = "https://github.com/ljsnogard/abs_mm.git", tag = "0.1.1" }

[dev-dependencies]
env_logger = { version = "0.11.*" }
log = { version = "0.4.*" }